--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
-<¡Doctype HTML>
-<html><html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+ 
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
+
+  </head>
+  <body>
+    <main>
+    </main>
+
+      <!--mexi aqui-->
+    <script src="main.js"></script>
+    <!--fim mexida minha Eduardo-->
+  </body>
+</html>
