--- a/Day2.html
+++ b/Day2.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+ 
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
 
+  </head>
+  <body>
+    <main>
+    </main>
+
+      <!--mexi aqui-->
+    <script src="main2.js"></script>
+    <!--fim mexida minha Eduardo-->
+  </body>
+</html>
