--- a/Day3.html
+++ b/Day3.html
@@ -1,3 +1,18 @@
-if (cidade === “Roma”){
-    // mostre a foto do “Coliseu”
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <iframe src="day3/menu.html">
+
+    </iframe>
+<div id="imagemdiv" >
+<Img src="day3/pexels-caio-45917.jpg"></Img>
+
+</div>
+
+</body>
+</html>
