subindo imagens na programação

--- a/Day3.html
+++ b/Day3.html
@@ -9,8 +9,8 @@
     <iframe src="day3/menu.html">
 
     </iframe>
-<div id="imagemdiv" >
-<Img src="day3/pexels-caio-45917.jpg"></Img>
+<div id="imagemdiv"  >
+<!--<Img src="day3/pexels-caio-45917.jpg"></Img>-->
 
 </div>
 
