terminado Day3 dia 3

--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
- 
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
 
-  </head>
-  <body>
-    <main>
-    </main>
+<head>
 
-      <!--mexi aqui-->
-    <script src="main.js"></script>
-    <!--fim mexida minha Eduardo-->
-  </body>
+  <!--<link rel="stylesheet" type="text/css" href="style.css">-->
+  <meta charset="utf-8" />
+
+</head>
+
+<body>
+  <main>
+  </main>
+
+  <!--mexi aqui-->
+  <script src="main.js"></script>
+  <!--fim mexida minha Eduardo-->
+</body>
+
 </html>
